@@ -285,46 +285,20 @@ def upload_p():
     
 @post('/config')
 def config_p():    
-    attrl = []
-    dicts = config.getDict()
-    portchange = False
-    bindchange = False  
-    for d in dicts:
-        val = request.forms.get(d)
-        if d == "cfg_server_port" and val != config.cfg_server_port:
-            try:
-                intval = int(val)
-                if intval>=2000 and intval<=32000:
-                    portchange = True
-            except:
-                pass
-            if not portchange:
-                print "Invalid port specified ('%s'). Please check your syntax or range (2000-32000)." % val
-                val = config.cfg_server_port
-        elif d == "cfg_server_bind_address" and val != config.cfg_server_bind_address:
-            try:
-                bind = val.split(".")
-                if len(bind)==4:
-                    bindchange = True  
-                    for i in bind:
-                        intval = int(i)
-                        bindchange = bindchange and (i>=0 or i<=255)                        
-            except:
-                bindchange = False
-                pass
-            if not bindchange and val != 'localhost':
-                print "Invalid bind address (%s). Please check your syntax." % val
-                val = config.cfg_server_bind_address
-
-        attrl.append([d, val])
-    config.setConfig(attrl, portchange)
+    configdata = json.loads(request.forms.get('configdata'))
+    config.setConfig(configdata)
     grabthread.run()
-    redirect("/config") 
+    return
 
 @route('/config')
 def config_s():    
-    return template('config', rows=sqlRun("SELECT * FROM config WHERE param<>'cfg_version' AND not param LIKE 'table_%'"))
+    return template('config')
 
+@route('/getconfig')
+def getconfig():
+    rows=sqlRun("SELECT * FROM config WHERE param<>'cfg_version' AND not param LIKE 'table_%'")
+    return json.dumps({"configdata": rows } )    
+    
 #------------------------------- EPG Grabbing part -------------------------------
 
 class epggrabthread(threading.Thread):
@@ -461,9 +435,13 @@ class epgthread(threading.Thread):
         threading.Thread.__init__(self)
 
     def run(self):
-        xmltv.getProgList(version)
-        global epgrunning
-        epgrunning = False
+        try:
+            xmltv.getProgList(version)
+        except:
+            print "XMLTV import could not be completed, please try again later (%s)" % sys.exc_info()[0]
+        finally:    
+            global epgrunning
+            epgrunning = False
 
 #------------------------------- EPG painting part -------------------------------
         
