@@ -1,4 +1,5 @@
-2014-02-xx 0.5.8 xmltvepg.nl support
+2014-02-xx 0.5.8 TVxb support
+				 Structured config page with built-in plausibility control
 
 2014-02-01 0.5.7 Table length will be saved
                  Plausibility check for server port and bind address added
